<resources>
    <string name="app_name">Traveleverywhre</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="or">or</string>
    <string name="Enterphone">请输入手机号码</string>
    <string name="Forbetterservice">你好,为了获取更好服务</string>
    <string name="Traveleverywhere">请登录到处旅行</string>
    <string name="Sendverificationcode">发送验证码</string>
    <string name="Bylogginginorregistering">登录或者注册既同意到处旅行用户协议</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接失败</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析异常</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="login_fail">登录失败</string>
    <string name="Cardstock">我的卡劵</string>
    <string name="Thetrip">已购行程</string>
    <string name="mycoll">我的收藏</string>
    <string name="concern">我的关注</string>
    <string name="Nanshen">卫浩森</string>
    <string name="Qian">别来无恙</string>
    <string name="bianyi">编译</string>
    <string name="qianbao">钱包</string>
    <string name="yuan">元</string>
    <string name="lianxikefu">联系客服</string>
    <string name="yijianfangui">意见反馈</string>
    <string name="banbenceshi">版本检测</string>
</resources>
