<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="compp.cumulus.traveleverywhre.activity.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_22"
        android:text="@string/Forbetterservice"
        android:layout_marginTop="@dimen/dp_73"
        android:layout_marginLeft="@dimen/dp_23"
        android:textColor="@color/c_FFFA6A13"
        android:textSize="@dimen/sp_16"
        /> />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_38"
        android:layout_marginTop="@dimen/dp_104"
        android:layout_marginLeft="@dimen/dp_23"
        android:text="@string/Traveleverywhere"
        android:textColor="@color/c_FF373737"
        android:textSize="@dimen/sp_27"
        />

    <ImageView
        android:layout_marginTop="@dimen/dp_248"
        android:layout_marginLeft="@dimen/dp_31"
        android:background="@mipmap/phone"
        android:layout_width="@dimen/dp_14"
        android:layout_height="@dimen/dp_21"
        android:id="@+id/imageView" />
    <TextView
        android:layout_width="@dimen/dp_28"
        android:layout_height="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_249"
        android:layout_marginLeft="@dimen/dp_53"
        android:text="+86"
        android:textColor="@color/c_FF636363"
        android:textSize="@dimen/sp_14"
        />

    <EditText
        android:id="@+id/ed_shou"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_22"
        android:layout_marginLeft="@dimen/dp_100"
        android:layout_alignTop="@+id/imageView"
        android:background="@null"
        android:maxLength="11"
        android:hint="@string/Enterphone"
        android:textColor="@color/c_FFC8C8C8"
        android:textSize="@dimen/sp_16" />
    <ImageView
        android:id="@+id/img"
        android:layout_marginTop="@dimen/dp_244"
        android:layout_marginLeft="@dimen/dp_263"
        android:layout_width="@dimen/dp_90"
        android:layout_height="@dimen/dp_30"
        android:background="@mipmap/button_unavailable"
        />
    <TextView
        android:id="@+id/te_yan"
        android:layout_marginTop="@dimen/dp_249"
        android:layout_marginLeft="@dimen/dp_274"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_20"
        android:text="@string/Sendverificationcode"
        android:textColor="#FFFEFEFE"
        android:textSize="@dimen/sp_12"
        />
    <View
        android:id="@+id/view"
        android:layout_marginTop="@dimen/dp_279"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_width="@dimen/dp_329"
        android:layout_height="@dimen/dp_1"
        android:background="@color/c_FFFA6A13"
        />

    <LinearLayout
        android:id="@+id/ll_or"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp_100"
        android:layout_below="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <View
            android:background="@drawable/gra_d8_a9"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"/>

        <TextView
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/or"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_a9a9a9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@drawable/gra_a9_d8"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@id/ll_or"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:layout_centerHorizontal="true"
        android:layout_height="@dimen/dp_50">
        <ImageView
            android:id="@+id/bin_qq"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/umeng_socialize_qq"
            />
        />
        <ImageView
            android:id="@+id/bin_wechat"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:background="@mipmap/wechat"
            />

        <ImageView
            android:id="@+id/bin_wb"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:background="@drawable/umeng_socialize_sina"
            />
    </LinearLayout>
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_18"
        android:text="@string/Bylogginginorregistering"
        android:layout_marginTop="@dimen/dp_470"
        android:layout_marginLeft="@dimen/dp_83"
        android:textColor="@color/c_FF999999"
        android:textSize="@dimen/sp_13"
        android:layout_marginBottom="@dimen/dp_21"
        />
</RelativeLayout>