<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"    >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/re_bianyi"
        android:layout_marginTop="@dimen/dp_37"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_70">
 <compp.cumulus.traveleverywhre.widget.CircleImageView
    android:id="@+id/touxiang"
     android:scaleType="centerCrop"
    android:src="@drawable/tt"
    android:layout_marginLeft="@dimen/dp_12"
    android:layout_width="@dimen/dp_70"
    android:layout_height="@dimen/dp_70" />

        <TextView
            android:id="@+id/mingzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/qianming"
            android:text="@string/Nanshen"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_22" />
        <TextView
            android:layout_marginTop="@dimen/dp_35"
            android:layout_marginLeft="@dimen/dp_93"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c_999999"
            android:text="@string/Qian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/qianming" />
        <ImageView
            android:layout_marginTop="@dimen/dp_52"
            android:layout_marginLeft="@dimen/dp_239"
            android:src="@drawable/icon_me_bianji"
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15" />
        <TextView
            android:layout_marginTop="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_259"
            android:textSize="@dimen/sp_14"
            android:textColor="@color/c_fa6a13"
            android:text="@string/bianyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/dp_10"
       android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_38"
        android:layout_height="@dimen/dp_122"
        android:background="@drawable/bg_ff9d53_r6"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:layout_marginLeft="@dimen/dp_10"
            android:text="@string/qianbao"
            android:textColor="@color/c_FFFFFF"
            android:textSize="@dimen/sp_14" />
        <TextView
            android:id="@+id/shuzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="99"
            android:textColor="@color/c_FFFFFF"
            android:textSize="@dimen/sp_58" />

        <TextView
            android:id="@+id/yuan"
            android:layout_alignBaseline="@+id/shuzi"
            android:layout_alignBottom="@+id/shuzi"
            android:layout_marginStart="14dp"
            android:layout_toEndOf="@+id/shuzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yuan"
            android:textColor="@color/c_FFFFFF"
            android:textSize="@dimen/sp_14"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/sp_14"
            android:text="赢取奖金  》"
            android:textColor="@color/c_FFFFFF" />
    </RelativeLayout>
    <android.support.v7.widget.CardView
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_height="@dimen/dp_220"
        app:cardCornerRadius="@dimen/dp_10"
        >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_220">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51">
        <ImageView
            android:layout_marginTop="@dimen/dp_17"
            android:layout_marginLeft="@dimen/dp_14"
            android:src="@drawable/icon_me_kaquan"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20" />
            <TextView
                android:text="@string/Cardstock"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_17"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/jiantou"
                android:layout_marginLeft="@dimen/dp_130"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_15" />

        </LinearLayout>
        <View
            android:background="@color/c_F0F0F0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51">
            <ImageView
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_14"
                android:src="@drawable/icon_me_yigou"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20" />
            <TextView
                android:text="@string/Thetrip"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_17"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/jiantou"
                android:layout_marginLeft="@dimen/dp_130"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_15" />
        </LinearLayout>
        <View
            android:background="@color/c_F0F0F0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
        <LinearLayout
            android:id="@+id/coll"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51">
            <ImageView
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_14"
                android:src="@drawable/icon_me_shoucang"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20" />
            <TextView
                android:text="@string/mycoll"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_17"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/jiantou"
                android:layout_marginLeft="@dimen/dp_130"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_15" />
        </LinearLayout>
        <View
            android:background="@color/c_F0F0F0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"/>
        <LinearLayout
            android:layout_weight="1"
            android:id="@+id/follow"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_51">
            <ImageView
                android:layout_marginTop="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_14"
                android:src="@drawable/icon_me_guanzhu"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20" />
            <TextView
                android:text="@string/concern"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_17"
                android:textSize="@dimen/sp_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginTop="@dimen/dp_20"
                android:background="@drawable/jiantou"
                android:layout_marginLeft="@dimen/dp_130"
                android:layout_width="@dimen/dp_13"
                android:layout_height="@dimen/dp_15" />
        </LinearLayout>

    </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_marginBottom="@dimen/dp_20"
      android:layout_alignParentBottom="true"
      android:layout_height="@dimen/dp_20">
      <LinearLayout
          android:layout_marginLeft="@dimen/dp_11"
          android:layout_marginTop="@dimen/dp_4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
      <ImageView
          android:src="@drawable/icon_me_kefu"
          android:layout_width="@dimen/dp_15"
          android:layout_height="@dimen/dp_15"
         />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/dp_5"
          android:text="@string/lianxikefu"
          android:textColor="@color/c_333333"
          android:textSize="@dimen/sp_12" />
      </LinearLayout>
      <LinearLayout
          android:layout_marginLeft="@dimen/dp_118"
          android:layout_marginTop="@dimen/dp_4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          <ImageView
              android:src="@drawable/icon_me_bianji"
              android:layout_width="@dimen/dp_15"
              android:layout_height="@dimen/dp_15"
           />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/dp_5"
              android:text="@string/yijianfangui"
              android:textColor="@color/c_333333"
              android:textSize="@dimen/sp_12" />
      </LinearLayout>
      <LinearLayout
          android:id="@+id/li_banben"
          android:layout_marginLeft="@dimen/dp_220"
          android:layout_marginTop="@dimen/dp_4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
          <ImageView
              android:src="@drawable/icon_me_banben"
              android:layout_width="@dimen/dp_15"
              android:layout_height="@dimen/dp_15"
              />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/dp_5"
              android:text="@string/banbenceshi"
              android:textColor="@color/c_333333"
              android:textSize="@dimen/sp_12" />
      </LinearLayout>
  </RelativeLayout>

</RelativeLayout>