<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="compp.cumulus.traveleverywhre.activity.HolldetailsActivity">
<ScrollView
    android:id="@+id/sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/c_FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_104">
        <TextView
            android:id="@+id/te_dizhi"
            android:textSize="@dimen/sp_14"
            android:layout_marginTop="@dimen/dp_13"
            android:layout_marginLeft="@dimen/dp_15"
            android:text="@string/mycoll"
            android:textColor="@color/c_999999"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/te_yinzuo"
            android:textSize="@dimen/sp_26"
            android:layout_marginTop="@dimen/dp_32"
            android:textColor="@color/c_373737"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/agentweb_default_page_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_fanhui"
            android:layout_alignParentEnd="true"
            android:background="@drawable/close"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_41"
            android:layout_width="@dimen/dp_25"
            android:layout_height="@dimen/dp_25" />
        <TextView
            android:id="@+id/text_6xiaoshi"
            android:textSize="@dimen/sp_18"
            android:layout_marginTop="@dimen/dp_66"
            android:textColor="@color/c_636363"
            android:layout_marginLeft="@dimen/dp_13"
            android:text="@string/Bylogginginorregistering"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
<RelativeLayout
    android:id="@+id/re_tupian"
    android:layout_marginTop="@dimen/dp_104"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/img_beijingtu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_400"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
         />
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/re_cir"
        android:layout_marginTop="@dimen/dp_500"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <compp.cumulus.traveleverywhre.widget.CircleImageView
        android:id="@+id/img_touxiang"
        android:scaleType="centerCrop"
        android:src="@drawable/tt"
        android:layout_marginLeft="@dimen/dp_21"
        android:layout_width="@dimen/dp_52"
        android:layout_height="@dimen/dp_52" />
        <TextView
            android:id="@+id/te_mingzi"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/c_373737"
            android:text="@string/Bylogginginorregistering"
            android:layout_marginLeft="@dimen/dp_93"
            android:layout_marginTop="@dimen/dp_10"
            android:maxLength="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/te_zhiye"
            android:textSize="@dimen/sp_12"
            android:textColor="@color/c_636363"
            android:text="@string/conn_error"
            android:layout_marginLeft="@dimen/dp_93"
            android:layout_marginTop="@dimen/dp_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/te_shi"
            android:textSize="@dimen/sp_10"
            android:textColor="@color/c_999999"
            android:text="北极狐"
            android:layout_marginEnd="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_22"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_nei"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_alignTop="@+id/re_cir"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_72">
            <TextView
                android:id="@+id/te_jieshao"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp_200"
                android:text="@string/conn_error" />
        </RelativeLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/re"
            android:layout_alignTop="@+id/re_nei"
            android:layout_marginTop="@dimen/dp_220"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
        <RelativeLayout
            android:id="@+id/re_che"
            android:layout_marginBottom="@dimen/dp_124"
            android:layout_below="@id/re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/te_pinglun"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginLeft="@dimen/dp_135"
                android:textColor="@color/c_FA6A13"
                android:text="查看全部评论"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_marginTop="@dimen/dp_60"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_30">
                <RelativeLayout
                    android:id="@+id/re_fenxiang"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
            <ImageView
                 android:layout_width="@dimen/dp_90"
                android:background="@drawable/btn_ea_r15"
                android:layout_marginLeft="@dimen/dp_71"
                 android:layout_height="@dimen/dp_30" />
                    <ImageView
                        android:layout_width="@dimen/dp_14"
                        android:background="@drawable/share_button"
                        android:layout_marginLeft="@dimen/dp_85"
                        android:layout_marginTop="@dimen/dp_10"
                        android:layout_height="@dimen/dp_14" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:background="@drawable/btn_ea_r15"
                        android:layout_marginLeft="@dimen/dp_105"
                        android:textSize="@dimen/sp_14"
                        android:text="分享"
                        android:layout_marginTop="@dimen/dp_8"
                        android:layout_height="wrap_content" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/re_shoucang"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="@dimen/dp_138"
                    android:layout_height="@dimen/dp_30">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageView
                            android:layout_width="@dimen/dp_90"
                            android:background="@drawable/btn_ea_r15"
                            android:layout_marginLeft="@dimen/dp_71"
                            android:layout_height="@dimen/dp_30" />
                        <ImageView
                            android:id="@+id/img_xing"
                            android:layout_width="@dimen/dp_14"
                            android:background="@drawable/collect_default"
                            android:layout_marginLeft="@dimen/dp_80"
                            android:layout_marginTop="@dimen/dp_10"
                            android:layout_height="@dimen/dp_14" />
                        <TextView
                            android:id="@+id/te_shouzi"
                            android:layout_width="wrap_content"
                            android:background="@drawable/btn_ea_r15"
                            android:layout_marginLeft="@dimen/dp_103"
                            android:textSize="@dimen/sp_14"
                            android:text="收藏"
                            android:layout_marginTop="@dimen/dp_6"
                            android:layout_height="wrap_content" />
                    </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
    </RelativeLayout>

</ScrollView>
    <View
        android:layout_width="match_parent"
        android:background="@drawable/gra_white_de"
        android:layout_marginBottom="@dimen/dp_84"
        android:layout_alignParentBottom="true"
        android:layout_height="@dimen/dp_3"/>
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="@dimen/dp_84">
        <ImageView
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginLeft="@dimen/dp_45"
            android:background="@drawable/button_preview" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_75"
            android:layout_marginTop="@dimen/dp_35"
            android:text="预览线路"
            android:textColor="@color/c_fa6a13"
            android:textSize="@dimen/sp_15"
            />
        <ImageView
            android:layout_marginLeft="@dimen/dp_203"
            android:layout_marginTop="@dimen/dp_20"
            android:background="@drawable/button_pay_particulars"
            android:layout_width="@dimen/dp_112"
            android:layout_height="@dimen/dp_50"
            />
        <TextView
            android:layout_marginLeft="@dimen/dp_225"
            android:layout_marginTop="@dimen/dp_33"
            android:text="@string/Thetrip"
            android:textSize="@dimen/sp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>
</RelativeLayout>
